# controllers/noticia_tipo_contenido.go
@@ -6,7 +6,7 @@ import (
 	"strconv"
 	"strings"
 
-	"github.com/udistrital/noticias_crud/models"
+	"github.com/udistrital/tirilla_noticias_crud/models"
 
 	"github.com/astaxie/beego"
 	"github.com/astaxie/beego/logs"
@@ -25,6 +25,7 @@ func (c *NoticiaTipoContenidoController) URLMapping() {
 	c.Mapping("GetAll", c.GetAll)
 	c.Mapping("Put", c.Put)
 	c.Mapping("Delete", c.Delete)
+	c.Mapping("GetContenidosByIdNoticia", c.GetContenidosByIdNoticia)
 }
 
 // Post ...
@@ -191,5 +192,36 @@ func (c *NoticiaTipoContenidoController) Delete() {
 		c.Data["mesaage"] = "Error service Delete: Request contains incorrect parameter"
 		c.Abort("404")
 	}
+	c.ServeJSON()
+}
+
+// GetContenidosByIdNoticia ...
+// @Title Get Contenidos By Id Noticia
+// @Description get NoticiaTipoContenido by idNoticia
+// @Param	idNoticia		path 	string	true		"The idNoticia you want to get"
+// @Success 200 {object} []models.NoticiaTipoContenido
+// @Failure 404 not found resource
+// @router /contenido/:idNoticia [get]
+func (c *NoticiaTipoContenidoController) GetContenidosByIdNoticia() {
+	idStr := c.Ctx.Input.Param(":idNoticia")
+	id, _ := strconv.Atoi(idStr)
+	v, err := models.GetContenidosByIdNoticia(id)
+	if err != nil {
+		logs.Error(err)
+		c.Data["json"] = map[string]interface{}{"Success": false, "Status": "404", "Message": "Error en el servicio GetEtiquetasByIdNoticia: El parámetro de solicitud es incorrecto o no existe ningún registro"}
+		c.ServeJSON()
+		return
+	}
+
+	// Si no se encuentran etiquetas asociadas a la noticia, responder con un mensaje apropiado
+	if v == nil {
+		c.Data["json"] = map[string]interface{}{"Success": true, "Status": "200", "Message": "No se encontraron etiquetas asociadas a la noticia", "Data": []*models.NoticiaTipoContenido{}}
+		c.ServeJSON()
+		return
+	}
+
+	// Respondiendo con las etiquetas encontradas
+	logs.Info(v)
+	c.Data["json"] = map[string]interface{}{"Success": true, "Status": "200", "Message": "Solicitud exitosa", "Data": v}
 	c.ServeJSON()
 }
